--- a/views/mail_gateway.xml
+++ b/views/mail_gateway.xml
@@ -19,7 +19,7 @@
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button
                     type="action"
-                    name="%(mail_gateway_whatsapp.action_mail_whatsapp_template_gateway)d"
+                    name="%(bader_inbox.action_mail_whatsapp_template_gateway)d"
                     attrs="{'invisible': [('gateway_type', '!=', 'whatsapp')]}"
                     class="oe_stat_button"
                     icon="fa-whatsapp"
