fix: Correct inherit_id reference in evolution views

--- a/views/mail_gateway_evolution_views.xml
+++ b/views/mail_gateway_evolution_views.xml
@@ -213,7 +213,7 @@
     <record id="view_bader_inbox_provider" model="ir.ui.view">
         <field name="name">mail.gateway.whatsapp.provider.form</field>
         <field name="model">mail.gateway</field>
-        <field name="inherit_id" ref="bader_inbox.view_mail_gateway_form"/>
+        <field name="inherit_id" ref="bader_inbox.mail_gateway_form_view"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='whatsapp_from_phone']" position="before">
                 <field name="whatsapp_provider" widget="radio" 
